--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,7 @@
 @import "../../node_modules/@fortawesome/fontawesome-free/css/solid.css";
 @import "../../node_modules/@fortawesome/fontawesome-free/css/brands.css";
 
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -17,4 +18,14 @@
 
 #menu-sidebar.active .menu__sidebar--item:nth-child(3) {
     transform: rotate(-45deg) translate(2px, -6px);
+}
+
+.leaflet-routing-container {
+    background-color: #fff;
+    padding : 2px 2px;
+    font-size: 8px
+}
+
+tr{
+    font-size: 10px
 }
